@@ -15,6 +15,7 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.*;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -42,9 +43,11 @@ public class SecurityConfig {
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers("/api/auth/**").permitAll()
-                        .anyRequest().authenticated());
-
-        http.addFilterBefore(authenticationJwtTokenFilter(authenticationManager), UsernamePasswordAuthenticationFilter.class);
+                        .requestMatchers("/error").permitAll()
+                        .requestMatchers("/actuator/**").permitAll()
+                        .anyRequest().authenticated()
+                )
+                .addFilterBefore(authenticationJwtTokenFilter(authenticationManager), UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -54,29 +57,39 @@ public class SecurityConfig {
         return configuration.getAuthenticationManager();
     }
 
-//    @Bean
-//    public CorsConfigurationSource corsConfigurationSource() {
-//        CorsConfiguration configuration = new CorsConfiguration();
-//        configuration.setAllowedOrigins(List.of("*"));
-//        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
-//        configuration.setAllowedHeaders(List.of("*"));
-//        configuration.setAllowCredentials(true);
-//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//        source.registerCorsConfiguration("/**", configuration);
-//        return source;
-//    }
-
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("*"));  // Use patterns instead
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true);  // Important for auth
-        configuration.setExposedHeaders(List.of("Authorization"));
+
+        // ✅ Use patterns, not exact origins
+        configuration.setAllowedOriginPatterns(List.of("*"));
+
+        // ✅ Allowed methods
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"
+        ));
+
+        // ✅ Allowed headers (don’t rely on wildcard in production)
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "Accept",
+                "X-Requested-With",
+                "Cache-Control"
+        ));
+
+        // ✅ Expose important headers
+        configuration.setExposedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Disposition"
+        ));
+
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+
         return source;
     }
 
@@ -85,3 +98,122 @@ public class SecurityConfig {
         return new BCryptPasswordEncoder();
     }
 }
+
+
+
+
+
+
+//package com.arthiq.config;
+//
+//import com.arthiq.security.JwtAuthenticationFilter;
+//import com.arthiq.security.UserDetailsServiceImpl;
+//import com.arthiq.util.JwtUtil;
+//import org.springframework.beans.factory.annotation.Autowired;
+//import org.springframework.context.annotation.*;
+//import org.springframework.security.authentication.AuthenticationManager;
+//import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+//import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+//import org.springframework.security.config.http.SessionCreationPolicy;
+//import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+//import org.springframework.security.crypto.password.PasswordEncoder;
+//import org.springframework.security.web.SecurityFilterChain;
+//import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+//import org.springframework.web.cors.*;
+//
+//import java.util.List;
+//
+//@Configuration
+//public class SecurityConfig {
+//
+//    @Autowired
+//    private UserDetailsServiceImpl userDetailsService;
+//
+//    @Autowired
+//    private JwtUtil jwtUtil;
+//
+//    @Bean
+//    public JwtAuthenticationFilter authenticationJwtTokenFilter(AuthenticationManager authenticationManager) {
+//        JwtAuthenticationFilter filter = new JwtAuthenticationFilter(authenticationManager);
+//        filter.setJwtUtil(jwtUtil);
+//        filter.setUserDetailsService(userDetailsService);
+//        return filter;
+//    }
+//
+////    @Bean
+////    public SecurityFilterChain filterChain(HttpSecurity http, AuthenticationManager authenticationManager) throws Exception {
+////        http
+////                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+////                .csrf(csrf -> csrf.disable())
+////                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+////                .authorizeHttpRequests(auth -> auth
+////                        .requestMatchers("/api/auth/**").permitAll()
+////                        .anyRequest().authenticated());
+////
+////        http.addFilterBefore(authenticationJwtTokenFilter(authenticationManager), UsernamePasswordAuthenticationFilter.class);
+////
+////        return http.build();
+////    }
+//
+//
+//    @Bean
+//    public SecurityFilterChain filterChain(HttpSecurity http, AuthenticationManager authenticationManager) throws Exception {
+//        http
+//                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+//                .csrf(csrf -> csrf.disable())
+//                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+//                .authorizeHttpRequests(auth -> auth
+//                        // Public endpoints - no authentication required
+//                        .requestMatchers("/").permitAll()                    // Root endpoint
+//                        .requestMatchers("/api/test").permitAll()            // Test endpoint
+//                        .requestMatchers("/api/auth/**").permitAll()         // Auth endpoints
+//                        .requestMatchers("/error").permitAll()               // Error page
+//                        .requestMatchers("/actuator/**").permitAll()         // Health checks
+//                        // All other endpoints require authentication
+//                        .anyRequest().authenticated());
+//
+//        // Add JWT filter
+//        http.addFilterBefore(authenticationJwtTokenFilter(authenticationManager),
+//                UsernamePasswordAuthenticationFilter.class);
+//
+//        return http.build();
+//    }
+//
+//
+//
+//    @Bean
+//    public AuthenticationManager authenticationManager(AuthenticationConfiguration configuration) throws Exception {
+//        return configuration.getAuthenticationManager();
+//    }
+//
+////    @Bean
+////    public CorsConfigurationSource corsConfigurationSource() {
+////        CorsConfiguration configuration = new CorsConfiguration();
+////        configuration.setAllowedOrigins(List.of("*"));
+////        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
+////        configuration.setAllowedHeaders(List.of("*"));
+////        configuration.setAllowCredentials(true);
+////        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+////        source.registerCorsConfiguration("/**", configuration);
+////        return source;
+////    }
+//
+//    @Bean
+//    public CorsConfigurationSource corsConfigurationSource() {
+//        CorsConfiguration configuration = new CorsConfiguration();
+//        configuration.setAllowedOriginPatterns(List.of("*"));  // Use patterns instead
+//        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+//        configuration.setAllowedHeaders(List.of("*"));
+//        configuration.setAllowCredentials(true);  // Important for auth
+//        configuration.setExposedHeaders(List.of("Authorization"));
+//
+//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        source.registerCorsConfiguration("/**", configuration);
+//        return source;
+//    }
+//
+//    @Bean
+//    public PasswordEncoder passwordEncoder() {
+//        return new BCryptPasswordEncoder();
+//    }
+//}
